--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 <input id="exact-search-button" type="checkbox"><span class="control-indicator"></span> All album versions
               </label>
             </div>
+            <button type="submit" class="btn btn-default">Log In</button>
           </form>
         </div><!-- /.navbar-collapse -->
       </div>
