--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
               </label>
             </div>
           </form>
-          <button type="submit" class="btn btn-default">Log In</button>
+          <form class="form-inline float-xs-right">
+    		<button class="btn btn-outline-success" type="submit">Log In</button>
+  		  </form>
         </div><!-- /.navbar-collapse -->
       </div>
     </div>
