--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             </div>
           </form>
         </div><!-- /.navbar-collapse -->
-        <form class="form-inline float-xs-right">
-    		<button class="btn btn-outline-success" type="submit">Log In</button>
+        <form class="navbar-form navbar-right form-inline">
+    		<button class="btn btn-default" type="submit">Log In</button>
   		</form>
       </div>
     </div>
