--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
               </label>
             </div>
           </form>
-        </div><!-- /.navbar-collapse -->
-        <form class="navbar-form navbar-right form-inline">
+        <form class="navbar-form navbar-right">
     		<button class="btn btn-default" type="submit">Log In</button>
   		</form>
+        </div><!-- /.navbar-collapse -->
       </div>
     </div>
     <div class="container regions">
