--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               </label>
             </div>
           </form>
-        <form class="navbar-form navbar-right">
+        <form id="log-in" class="navbar-form navbar-right"> <!--Adding Log In functionality-->
     		<button class="btn btn-default" type="submit">Log In</button>
   		</form>
         </div><!-- /.navbar-collapse -->
