--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/0.8.1/mustache.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.2/d3.min.js"></script>
-    <script type="text/javascript" src="app/assets/javascripts/application.js"></script>
+    <script type="text/javascript" src="app/assets/javascripts/home.coffee"></script>
 
 </body>
 </html>
