--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Album Availability Map</title>
+    <title>Spotify WorldView</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="app/assets/stylesheets/custom.scss">
   </head>
@@ -16,7 +16,7 @@
             <span class="icon-bar"></span>
           </button>
           <span class="navbar-brand">
-            <span class="navbar-title">Album Availability on Spotify</span>
+            <span class="navbar-title">Spotify WorldView</span>
           </span>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -32,6 +32,7 @@
               </label>
             </div>
           </form>
+          <button type="submit" class="btn btn-default">Search</button>
         </div><!-- /.navbar-collapse -->
       </div>
     </div>
