--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
                 <input id="exact-search-button" type="checkbox"><span class="control-indicator"></span> All album versions
               </label>
             </div>
-          </form>
-          <button type="submit" class="btn btn-default">Search</button>
+          <form class="navbar-form navbar-right">
+      		<button class="btn btn-default" type="submit">Log In</button>
+    		</form>
         </div><!-- /.navbar-collapse -->
       </div>
     </div>
