--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <form id="search-form" class="navbar-form navbar-left form-inline" role="search">
             <div class="form-group">
-              <input type="text" class="form-control" placeholder="e.g. spotify:album:18qY7zpuNqeXNGywRysjxx">
+              <input type="text" class="form-control" placeholder="Type \'spotify:album:18qY7zpuNqeXNGywRysjxx(URI)\'">
             </div>
             <button type="submit" class="btn btn-default">Search</button>
             <div class="checkbox">
@@ -32,7 +32,7 @@
               </label>
             </div>
           </form>
-          <form class="navbar-form navbar-right">
+          <form class="navbar-form navbar-right form-inline">
       		<button class="btn btn-default" type="submit">Log In</button>
           </form>
         </div><!-- /.navbar-collapse -->
