--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <form id="search-form" class="navbar-form navbar-left form-inline" role="search">
-            <div class="form-group">
-              <input type="text" class="form-control" placeholder="Type \'spotify:album:18qY7zpuNqeXNGywRysjxx(URI)\'">
+            <center><div class="form-group">
+              <input type="text" class="form-control" placeholder="Type 'spotify:album:18qY7zpuNqeXNGywRysjxx(URI)'">
             </div>
             <button type="submit" class="btn btn-default">Search</button>
             <div class="checkbox">
               <label>
                 <input id="exact-search-button" type="checkbox"><span class="control-indicator"></span> All album versions
-              </label>
-            </div>
+                </label>
+                </div></center>
           </form>
           <form class="navbar-form navbar-right form-inline">
       		<button class="btn btn-default" type="submit">Log In</button>
