--- a/index.html
+++ b/index.html
@@ -23,17 +23,18 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <form id="search-form" class="navbar-form navbar-left form-inline" role="search">
             <center><div class="form-group">
-              <input type="text" class="form-control" placeholder="Type 'spotify:album:18qY7zpuNqeXNGywRysjxx(URI)'">
+            <!--Added better explanation of use of search bar from original source code-->
+              <input type="text" class="form-control" placeholder="Enter URI, e.g. 18qY7zpuNqeXNGywRysjxx">
             </div>
-            <button type="submit" class="btn btn-default">Search</button>
+            <button type="submit" class="btn btn-default">Search by URI</button>
             <div class="checkbox">
               <label>
                 <input id="exact-search-button" type="checkbox"><span class="control-indicator"></span> All album versions
                 </label>
                 </div></center>
           </form>
-          <form class="navbar-form navbar-right form-inline">
-      		<button class="btn btn-default" type="submit">Log In</button>
+          <form class="navbar-form navbar-right form-inline" action:="localhost:3000">
+      		<button class="btn btn-default" type="submit">Search by Keyword</button>
           </form>
         </div><!-- /.navbar-collapse -->
       </div>
