--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </label>
                 </div></center>
           </form>
-          <form class="navbar-form navbar-right form-inline" action:="localhost:3000">
+          <form class="navbar-form navbar-right form-inline" href="localhost:3000">
       		<button class="btn btn-default" type="submit">Search by Keyword</button>
           </form>
         </div><!-- /.navbar-collapse -->
