--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                 </label>
                 </div></center>
           </form>
-          <form class="navbar-form navbar-right form-inline" href="localhost:3000">
-      		<button class="btn btn-default" type="submit">Search by Keyword</button>
+          <form class="navbar-form navbar-right form-inline">
+            <a href="http://localhost:3000" class="btn btn-default">Search by Keyword</a>
           </form>
         </div><!-- /.navbar-collapse -->
       </div>
