--- a/index.html
+++ b/index.html
@@ -54,12 +54,13 @@
     </div>
 
     <div class="albums-only">
-      <h2>Only albums are supported</h2>
+      <h2>Invalid URI entered. Please enter a valid URI or search by keyword.</h2>
     </div>
 
     <script id="template-album-info-big" type="x-tmpl-mustache">
       <h1 class="title">{{albumTitle}}</h1>
       <h2 class="artist">{{albumType}} by {{artistName}}</h2>
+      <h6 Enter an album URI into the search bar, drag an album from the Spotify app, or search for an album by keyword and the map will show the countries in which the album is available. You can view all versions of an album by checking the box.</h6>
     </script>
 
     <script id="template-album-not-found" type="x-tmpl-mustache">
