--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </div></center>
           </form>
           <form class="navbar-form navbar-right form-inline">
-            <a href="app/views/home/index.html.erb" class="btn btn-default">Search by Keyword</a>
+            <a href="localhost:3000" class="btn btn-default">Search by Keyword</a>
           </form>
         </div><!-- /.navbar-collapse -->
       </div>
