--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
                 </div></center>
           </form>
           <form class="navbar-form navbar-right form-inline">
-            <a href="localhost:3000" class="btn btn-default">Search by Keyword</a>
+            <a href="http://localhost:3000" class="btn btn-default">Search by Keyword</a>
           </form>
+        <h6 class="instructions">Enter an album URI in the search bar or search for an album by keyword and the map will show the countries in which the album is available. You can view all versions of an album by checking the box.</h6>
         </div><!-- /.navbar-collapse -->
       </div>
-      <h6 class="instructions">Enter an album URI into the search bar, drag an album from the Spotify app, or search for an album by keyword and the map will show the countries in which the album is available. You can view all versions of an album by checking the box.</h6>
     </div>
     <div class="container regions">
       <div class="row">
