Minor edits to show page and map interface

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <form class="navbar-form navbar-right form-inline">
             <a href="http://localhost:3000" class="btn btn-default">Search by Keyword</a>
           </form>
-        <h6 class="instructions">Enter an album URI in the search bar or search for an album by keyword and the map will show the countries in which the album is available. You can view all versions of an album by checking the box.</h6>
+        <h6 class="instructions">Search for an album by URI, keyword, or saved albums from Spotify. The map shows countries in which the album is available.</h6>
         </div><!-- /.navbar-collapse -->
       </div>
     </div>
